# relics

./: .flake8  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SPEC.md  perf_after.txt  perf_baseline.txt  procedural_prefabs_addon_spec.md  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  lint.yml  release.yml  test.yml
demo/: README.md  __init__.py  camera.py  components.py  config.py  main.py  prefabs.py  systems.py
demos/: __init__.py
demos/chain_reaction/: README.md  __init__.py  main.py
demos/character_sheet/: README.md  __init__.py  components.py  main.py
demos/character_sheet/prefabs/: armor.procprefab.json  axe.procprefab.json  bow.procprefab.json  character.procprefab.json  clothing.procprefab.json  sword.procprefab.json
demos/hello_ecs/: README.md  __init__.py  main.py
demos/inventory_tree/: README.md  __init__.py  main.py
demos/multiprocessing/: README.md  __init__.py  components.py  config.py  ecs_process.py  main.py  messages.py  render_process.py  systems.py
demos/pygame/: README.md  camera.py  components.py  config.py  main.py  prefabs.py  systems.py
demos/spatial_aoe/: README.md  __init__.py  main.py
docs/: AGENT_GUIDE.md  BENCHMARKS.md  BEST_PRACTICES.md  ENTITIES_COMPONENTS.md  GETTING_STARTED.md  OBSERVERS.md  README.md  RELATIONSHIPS.md  SYSTEMS.md  TODO_ADDONS.md  WORLD.md
docs/specs/: CORE.md  scene_graph_addon_spec.md  tile_grid_addon_spec.md
docs/todos/: DEMOS.md  DRIVERS.md
examples/: basic_ecs.py  observers_events.py  persistence_indexes.py  relationships.py
scripts/: demo.sh  setup.sh  test.sh
src/relics/: __init__.py  entity.py  errors.py  index.py  monitored.py  observer.py  persistence.py  prefab.py  query.py  shared.py  system.py  types.py  world.py
src/relics/addons/: __init__.py
src/relics/addons/procedural_prefabs/: README.md  __init__.py  context.py  edges.py  exceptions.py  matcher.py  observer.py  prefab.py  registry.py  resolver.py  spawner.py  utils.py
src/relics/addons/prometheus/: README.md  __init__.py  collector.py  metrics.py  server.py
src/relics/addons/scene_graph/: README.md  __init__.py  components.py  edges.py  exceptions.py  factory.py  index.py  observer.py  types.py  utils.py
src/relics/addons/spatial/: README.md  __init__.py  components.py  factory.py  index.py  index3d.py  observer.py  octree.py  quadtree.py  types.py
src/relics/addons/spatial/docs/: architecture.md  performance.md
src/relics/addons/tilegrid/: README.md  __init__.py  components.py  exceptions.py  factory.py  index.py  observer.py  types.py  utilities.py
src/relics/addons/websocket/: README.md  __init__.py  base.py  client.py  exceptions.py  observers.py  protocol.py  server.py  types.py
src/relics/persistence/: __init__.py  base.py  serialization.py
src/relics/persistence/drivers/: __init__.py  json.py  memory.py  sqlite.py
tests/: conftest.py  test_component_change_performance.py  test_custom_events.py  test_documentation_examples.py  test_edge_queries.py  test_entity.py  test_indexes.py  test_monitored.py  test_observer.py  test_package_metadata.py  test_performance.py  test_persistence.py  test_prefab.py  test_query.py  test_relationships.py  test_shared.py  test_system.py  test_types.py  test_world.py
tests/addons/: __init__.py
tests/addons/procedural_prefabs/: __init__.py  test_context.py  test_edges.py  test_integration.py  test_matcher.py  test_observer.py  test_performance.py  test_prefab.py  test_registry.py  test_resolver.py  test_spawner.py  test_utils.py
tests/addons/prometheus/: __init__.py  test_collector.py  test_metrics.py  test_server.py
tests/addons/scene_graph/: __init__.py  test_components.py  test_edges.py  test_exceptions.py  test_factory.py  test_index.py  test_integration.py  test_numpy_compat.py  test_observer.py  test_performance.py  test_types.py  test_utils.py
tests/addons/spatial/: __init__.py  test_components.py  test_factory.py  test_integration.py  test_lazy_index.py  test_materialized_index.py  test_numpy_compat.py  test_observer.py  test_octree.py  test_performance.py  test_quadtree.py  test_types.py
tests/addons/tilegrid/: __init__.py  test_components.py  test_exceptions.py  test_index.py  test_integration.py  test_observer.py  test_performance.py  test_types.py  test_utilities.py
tests/addons/websocket/: __init__.py  test_client.py  test_exceptions.py  test_integration.py  test_observers.py  test_protocol.py  test_server.py  test_types.py
tests/persistence/: __init__.py  test_json_driver.py  test_memory_driver.py  test_round_trip.py  test_serialization.py  test_sqlite_driver.py
