[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "relics"
version = "0.1.0"
description = "Relics project"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "sqlalchemy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "black",
    "isort",
    "mypy",
]
demo = [
    "pygame-ce>=2.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | venv
    | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = ["venv", ".git", "__pycache__"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
