[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "relics"
version = "0.1.0"
description = "Relics project"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "sqlalchemy",
]

[project.optional-dependencies]
dev = [
    "pytest~=9.0.0",
    "pytest-asyncio~=1.3.0",
    "pytest-cov~=7.0.0",
    "flake8~=7.3.0",
    "black~=26.1.0",
    "isort~=7.0.0",
    "mypy~=1.19.0",
]
demo = [
    "pygame-ce>=2.5.0",
]
metrics = [
    "prometheus-client>=0.20.0",
]
websocket = [
    "websockets>=12.0",
]
numpy = [
    "numpy>=1.21.0",
]
all = [
    "relics[dev,demo,metrics,websocket,numpy]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "perf: marks tests as performance tests (deselect with '-m \"not perf\"')",
]
addopts = "-m 'not perf'"

[tool.black]
line-length = 88
target-version = ["py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | venv
    | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = ["venv", ".git", "__pycache__"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "@abstractmethod",
    "pass  # abstract",
]
