[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "relics-ecs"
version = "0.1.0"
description = "A typed entity-component-system framework with graph database semantics"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Sean Sube" },
]
requires-python = ">=3.11"
keywords = ["ecs", "entity-component-system", "game-development", "graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "pydantic",
    "sqlalchemy",
]

[project.urls]
Homepage = "https://github.com/ssube/relics"
Documentation = "https://github.com/ssube/relics/tree/main/docs"
Issues = "https://github.com/ssube/relics/issues"
Repository = "https://github.com/ssube/relics.git"

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<9.2",
    "pytest-asyncio>=1.3,<1.5",
    "pytest-cov>=7.0,<7.2",
    "flake8~=7.3.0",
    "black>=26.3.1,<26.6.0",
    "isort>=7.0,<8.1",
    "mypy>=1.19,<2.4",
]
demo = [
    "pygame-ce>=2.5.0",
]
metrics = [
    "prometheus-client>=0.20.0",
]
websocket = [
    "websockets>=12.0",
]
numpy = [
    "numpy>=1.21.0",
]
all = [
    "relics-ecs[demo,metrics,websocket,numpy]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "perf: marks tests as performance tests (deselect with '-m \"not perf\"')",
]
addopts = "-m 'not perf'"

[tool.black]
line-length = 88
target-version = ["py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | venv
    | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = ["venv", ".git", "__pycache__"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "@abstractmethod",
    "pass  # abstract",
]
